# semantic_mapping

./: .gitignore  .gitmodules  README.md
config/: habitat_env.yml  semantic_mapping_conda.yaml  semantic_mapping_conda_no_build.yaml
habitat/: .gitignore  README.md  setup.sh
habitat/config/: habitat_env.yml
habitat/habitat_interface/: arrows_example.py  config.py  obsolete.py  ros.py  simple_navigation.py  traj_sim.py  utils.py
kimera_ws/: .gitignore  README.md
kimera_ws/scripts/: remote_ros_client_setup.sh  remote_ros_host_setup.sh
kimera_ws/src/: vision_opencv_fc782bb.patch
kimera_ws/src/kimera_interface/: .gitignore  CMakeLists.txt  package.xml
kimera_ws/src/kimera_interface/cfg/: k4a_camera_config.yaml  nyu_40_segmentation_mapping.csv  rendering.rviz  sunrgbd_with_colors.csv  zedm_camera_config.yaml
kimera_ws/src/kimera_interface/include/: ClassInstance.h  CloudSegmentation.h  FilterCloud.h  depth_conversions.h
kimera_ws/src/kimera_interface/install/: kimera_interface.rosinstall
kimera_ws/src/kimera_interface/launch/: custom_zed_launch.launch  export_pose_with_imgs.launch  gt_habitat_semantic.launch  instance_segmentation.launch  merge_pointclouds.launch  reconstruction_pipeline.launch  rescale_camera.launch  ucoslam_habitat_semantic.launch  ucoslam_k4a_semantic.launch  ucoslam_realsense_semantic.launch  ucoslam_zed_semantic.launch  zedd_sdk_semantic.launch
kimera_ws/src/kimera_interface/launch/bak/: d435i_kimera_realsense_node.launch  rs_d435_ucoslam_mode.launch
kimera_ws/src/kimera_interface/msg/: ClassInstance.msg  ClassInstanceArray.msg
kimera_ws/src/kimera_interface/rviz/: kimera_habitat_metric.rviz  kimera_k4a_metric.rviz  kimera_realsense_metric.rviz  kimera_zed_metric.rviz
kimera_ws/src/kimera_interface/scripts/: save_images_with_poses.py
kimera_ws/src/kimera_interface/src/: CloudSegmentation.cpp  FilterCloud.cpp  cloud_filter_node.cpp  instance_segmentation_node.cpp  pointcloud_transformer_node.cpp
kimera_ws/src/openbot_navigation/: CMakeLists.txt  README.md  package.xml
kimera_ws/src/openbot_navigation/cfg/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  openbot_planner_params.yaml  rviz_costmap_visualization.rviz
kimera_ws/src/openbot_navigation/launch/: openbot_run_configuration.launch  openbot_twist.launch
kimera_ws/src/openbot_navigation/src/: twist_to_motor.py
kimera_ws/src/semantic_segmentation/: CMakeLists.txt  package.xml
kimera_ws/src/semantic_segmentation/launch/: esa_segmentation.launch
kimera_ws/src/semantic_segmentation/src/ESANet/: inference_samples.py  ros_inference.py
scripts/: export_mesh.sh  init_conda.sh  init_workspace.sh  run_ESA_segmentation_k4a.sh  run_ESA_segmentation_rsd.sh  run_ESA_segmentation_zedm.sh  run_image_undistort.sh  run_kimera_mapping.sh  run_kimera_mapping_livingroom_rosbag.sh  run_mapping_habitat.sh  run_mapping_k4a.sh  run_mapping_rosbag.sh  run_mapping_rsd435.sh  run_maskrcnn_segmentation_habitat.sh  run_maskrcnn_segmentation_k4a.sh  run_maskrcnn_segmentation_rsd.sh  run_source_k4a.sh  run_source_rosbag.sh  run_source_rsd435.sh  run_source_rsd435_custom.sh  run_source_rsd435_rescaled.sh  run_source_zed2.sh  run_source_zedm.sh  run_source_zedm_cpu.sh  run_source_zedm_custom.sh  run_source_zedm_with_tf.sh  run_teleop_jetson.sh
scripts/pointcloud_confusion/: CMakeLists.txt  main.cpp
scripts/pointcloud_confusion/data/: .gitignore  confusion_matrix.csv  sunrgbd_13_segmentation_mapping.csv
scripts/rosbags/: record_k4a_rosbag_compressed.txt  record_realsense_rosbag.sh
semantic_segmentation/: README.md
semantic_segmentation/ESANet/: README.md  inference_samples.py  ros_inference.py
(+17 files in other folders)
