<?xml version="1.0"?>
<package format="2">
  <name>openbot_navigation</name>
  <version>1.0.0</version>
  <description>The navigation package building on the Kimera-UcoSLAM backend for indoor localization 	in semantic maps</description>

  <maintainer email="davidrozenberszki@gmail.com">David Rozenberszki</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kimera_interface</build_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>kimera_interface</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>kimera_interface</exec_depend>
  <exec_depend>move_base</exec_depend>

  <depend>image_transport</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
