<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation</name>
  <version>0.0.0</version>
  <description>RGB and RGBD semantic segmentation nodes to work within ROS environment</description>

  <maintainer email="davidrozenberszki@gmail.com">rozdavid</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>cmake_modules</depend>
</package>
